--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@expo/ngrok": "^4.1.1",
+    "@sendgrid/mail": "^8.1.0",
     "axios": "^1.1.3",
     "base-64": "^1.0.0",
     "convert-csv-to-json": "^1.3.3",
